--- a/Aulas/Projeto atualizado/locadora-veiculo-web/pom.xml
+++ b/Aulas/Projeto atualizado/locadora-veiculo-web/pom.xml
@@ -152,6 +152,14 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/c3p0/c3p0 -->
+		<dependency>
+    		<groupId>c3p0</groupId>
+    		<artifactId>c3p0</artifactId>
+    		<version>0.9.0.4</version>
+		</dependency>
+		
 	</dependencies>
 
 </project>
