--- a/Aulas/Projeto atualizado/locadora-veiculo-web/pom.xml
+++ b/Aulas/Projeto atualizado/locadora-veiculo-web/pom.xml
@@ -15,7 +15,7 @@
 		<hibernate.version>4.3.11.Final</hibernate.version>
 		
 		<!-- Driver MySQL -->
-		<mysql.connector.version>5.1.35</mysql.connector.version>
+		<mysql.connector.version>5.1.39</mysql.connector.version>
 		
 		<!-- Omnifaces -->
 		<omnifaces.version>2.1</omnifaces.version>
@@ -43,6 +43,9 @@
 		
 		<!-- Commons Lang (utilidades) -->
 		<commons-lang3.version>3.4</commons-lang3.version>
+		
+		<!-- c3p0 -->
+		<c3p0.version>0.9.5.2</c3p0.version>
 	</properties>
 
 	<build>
@@ -52,8 +55,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -154,10 +157,11 @@
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/c3p0/c3p0 -->
+		<!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
 		<dependency>
-    		<groupId>c3p0</groupId>
+    		<groupId>com.mchange</groupId>
     		<artifactId>c3p0</artifactId>
-    		<version>0.9.0.4</version>
+    		<version>${c3p0.version}</version>
 		</dependency>
 		
 	</dependencies>
