--- a/Aulas/Criando projeto do curso/locadora-veiculo-web/pom.xml
+++ b/Aulas/Criando projeto do curso/locadora-veiculo-web/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	
+
 	<build>
 		<finalName>locadora-veiculo-web</finalName>
 		<plugins>
@@ -82,6 +82,14 @@
 			<version>5.1.25</version>
 			<scope>compile</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<!-- Repositorio PrimeFaces -->
