adicionado mais exemplos

--- a/Aulas/Importando um projeto do GitHub/primeiro-projeto-jsf/src/main/webapp/WEB-INF/web.xml
+++ b/Aulas/Importando um projeto do GitHub/primeiro-projeto-jsf/src/main/webapp/WEB-INF/web.xml
@@ -17,4 +17,8 @@
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
 	
+	<welcome-file-list>
+		<welcome-file>OlaJSF.xhtml</welcome-file>
+	</welcome-file-list>
+	
 </web-app>
